# balatro-gym

./: README.md  action_mask_wrapper.py  balatro_environment_explorer.py  balatro_gym_integration.py  balatro_puffer_env.py  data_structures.py  dataset_vieweer.py  debug_balatro_rewards.py  debug_episode_generation.py  enhanced_balatro_policy.py  final_fixed_integration.py  play_agent_masked.py  pyproject.toml  requirements.txt  run_streamlit.sh  set_up_bal_traj.sh  set_up_bal_traj.sj  simple_streamlit_viewer.py  targeted_balatro_fix.py  test_data_generator.py  traj_2.py  traj_rec.py  vizualize.py
.venv312/: pyvenv.cfg
agents/: __init__.py  base_agent.py
balatro-gym/: __init__.py  actions.py  bal_env_agent.py  cards.py  consumables.py  jokers.py  reward_shaper.py  state_formatter.py  vouchers.py
balatro_dataset/: dataset_metadata.json  episode_000000.pkl  episode_000000_metadata.json  episode_000001.pkl  episode_000001_metadata.json  episode_000002.pkl  episode_000002_metadata.json  episode_000003.pkl  episode_000003_metadata.json  episode_000004.pkl  episode_000004_metadata.json  episode_000005.pkl  episode_000005_metadata.json  episode_000006.pkl  episode_000006_metadata.json  episode_000007.pkl  episode_000007_metadata.json  episode_000008.pkl  episode_000008_metadata.json  episode_000009.pkl  episode_000009_metadata.json  episode_000010.pkl  episode_000010_metadata.json  episode_000011.pkl  episode_000011_metadata.json  episode_000012.pkl  episode_000012_metadata.json  episode_000013.pkl  episode_000013_metadata.json  episode_000014.pkl  episode_000014_metadata.json  episode_000015.pkl  episode_000015_metadata.json  episode_000016.pkl  episode_000016_metadata.json  episode_000017.pkl  episode_000017_metadata.json  episode_000018.pkl  episode_000018_metadata.json  episode_000019.pkl  (+1962 more)
balatro_gym/: __init__.py  bal_env_agent.py  cards.py  consumables.py  env.py  reward_shaper.py  state_formatter.py
utils/: __init__.py  (+1 more)
(+13838 files in other folders)
